tests/samples/invalid/duplicate_return.pn
fn main() -> i32
{
	var x = 33;

	{
		goto return;
		x = -1000;
		return:
		x = 7;
	}

	return:
	x
}
